# FOCUS-GUI

./: .gitignore  .webui_admin_key  API.py  ExGrid.py  GUI.py  README.md  SLMResponse.py  Tools.py  app.py  gui.py  main.py  pyproject.toml  requirements.txt
KB/: Knowledge.txt  StudyHistory.txt  goodKnowledge.txt
KB/GoodExamples/: goodKnowledge2.txt  goodStudyHistory.txt
Prompts/: GenerateActions.txt  KnowledgePrompt.txt  QuizPrompt.txt  SummaryAction.txt  SummaryPrompt.txt  SysPrompt.txt  old_GenerateActions.txt
Prompts/Para/: GenerateActions.txt
SensorLogs/: faceTracker.txt  gazeTracker.txt
Sensors/PythonFaceTracker/: main.py
Sensors/PythonGazeTracker/: example.py
Sensors/PythonGazeTracker/gaze_tracking/: pupil.py
examples/: exButtonResize.py  exEventBindings.py  exFramesOld.py  exGridGui.py
modules/: ActionButtons.py  BaseFrames.py  ChatWindow.py  PDFViewer.py  QuizModule.py  RootWindow.py  Sensors.py
tests/: ActionButtons.py  Buttons.py  ChangeButton.py  ChatIntegration.py  Frames.py  GenerateActions.py  PDFIntegration.py  SLMResponse.py  SensorTest.py  Sensors.py  SiblingFrameNames.py  SplitResponse.py  TkInterBindsTest.py  frames.py
